--- a/package.json
+++ b/package.json
@@ -31,9 +31,36 @@
     "electron": ">=6.x"
   },
   "dependencies": {
-    "atom-package-deps": "^8.0.0"
+    "@atom/plist": "0.4.4",
+    "asar-require": "0.3.0",
+    "async": "^3.2.0",
+    "colors": "~1.4.0",
+    "first-mate": "^7.4.3",
+    "fs-plus": "3.x",
+    "git-utils": "^5.7.2",
+    "glob": "^7.1.6",
+    "hosted-git-info": "^3.0.7",
+    "keytar": "^7.7.0",
+    "mv": "2.1.1",
+    "ncp": "~2.0.0",
+    "npm": "^6.14.9",
+    "open": "7.3.0",
+    "q": "~1.5.1",
+    "read": "~1.0.7",
+    "request": "^2.88.2",
+    "rimraf": "^3.0.2",
+    "season": "^6.0.2",
+    "semver": "^7.3.4",
+    "tar": "^6.0.5",
+    "temp": "^0.9.4",
+    "underscore-plus": "1.x",
+    "wordwrap": "1.0.0",
+    "wrench": "~1.5.1",
+    "yargs": "^3.32.0"
   },
   "devDependencies": {
+    "express": "^4.17.1",
+    "node-gyp": "^5.1.1",
     "@types/atom": "1.40.11",
     "@types/jasmine": "^3.8.1",
     "@types/node": "^16.4.0",
