chore: add coffee build script

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write .",
     "test.format": "prettier . --check",
     "lint": "eslint . --fix",
+    "coffee": "coffee --compile --output lib src",
     "test.lint": "eslint .",
     "test": "node ./script/get-fixtures.js && npm run check-version && jasmine-focused --captureExceptions --coffee spec",
     "clean": "shx rm -rf dist",
@@ -19,7 +20,7 @@
     "build": "npm run clean && cross-env NODE_ENV=production cross-env BABEL_KEEP_MODULES=true rollup -c",
     "build-commit": "build-commit -o dist",
     "bump": "ncu -u -x coffeescript",
-    "prepare": "npm run tsc && node script/postinstall.js",
+    "prepare": "npm run coffee && node script/postinstall.js",
     "check-version": "node script/check-version.js"
   },
   "prettier": "prettier-config-atomic",
@@ -63,6 +64,7 @@
     "@types/jasmine": "^1",
     "@types/node": "^16.4.0",
     "build-commit": "0.1.4",
+    "coffee-script": "^1.12.7",
     "cross-env": "7.0.3",
     "eslint-config-atomic": "^1.16.2",
     "express": "^4.17.1",
