--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   Test:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    name: ${{ matrix.os }} - Atom ${{ matrix.atom_channel }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -17,12 +16,26 @@ jobs:
           - ubuntu-latest
           - macos-latest
           - windows-latest
-        atom_channel: [stable, beta]
+        node_version:
+          - 12
+          - 14
+        node_arch:
+          - x64
+        include:
+          - os: windows-2016
+            node_version: 12
+            node_arch: x86
     steps:
       - uses: actions/checkout@v2
-      - uses: atom-community/action-setup-atom@v1
+
+      - name: Install Node
+        uses: actions/setup-node@v2
         with:
-          channel: ${{ matrix.atom_channel }}
+          node-version: ${{ matrix.node_version }}
+          architecture: ${{ matrix.node_arch }}
+
+      - name: Install npm
+        run: npm install -g npm
 
       - name: Install dependencies
         run: npm install
