--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "papm",
-  "main": "dist/main.js",
   "version": "0.1.0",
   "author": "<Your Name>",
   "description": "Performant Atom Package Manager",
-  "keywords": [
-    "pnpm",
-    "npm",
-    "apm",
-    "pm",
-    "atom",
-    "package-manager"
-  ],
   "repository": "https://github.com/atom-community/papm",
   "license": "MIT",
+  "main": "./lib/apm.js",
+  "bin": {
+    "apm": "bin/apm"
+  },
   "scripts": {
     "format": "prettier --write .",
     "test.format": "prettier . --check",
@@ -31,9 +26,6 @@
     "check-version": "node script/check-version.js"
   },
   "prettier": "prettier-config-atomic",
-  "activationHooks": [
-    "core:loaded-shell-environment"
-  ],
   "engines": {
     "atom": ">=1.52.0 <2.0.0",
     "electron": ">=6.x"
@@ -85,7 +77,12 @@
     "terser-config-atomic": "^0.1.1",
     "typescript": "^4.3.5"
   },
-  "providedServices": {},
-  "consumedServices": {},
-  "package-deps": []
+  "keywords": [
+    "pnpm",
+    "npm",
+    "apm",
+    "pm",
+    "atom",
+    "package-manager"
+  ]
 }
