--- a/package.json
+++ b/package.json
@@ -59,23 +59,12 @@
     "yargs": "^3.32.0"
   },
   "devDependencies": {
-    "@types/atom": "1.40.11",
-    "@types/jasmine": "^1",
-    "@types/node": "^16.4.0",
-    "build-commit": "0.1.4",
     "coffee-script": "^1.12.7",
-    "cross-env": "7.0.3",
-    "eslint-config-atomic": "^1.16.2",
     "express": "^4.17.1",
-    "jasmine-focused": "^1.0.7",
     "node-downloader-helper": "^1.0.18",
+    "jasmine-focused": ">=1.0.7 <2.0",
     "node-gyp": "^5.1.1",
-    "npm-check-updates": "11.8.3",
-    "prettier-config-atomic": "^2.0.5",
-    "rollup-plugin-atomic": "^2.4.0",
-    "shx": "0.3.3",
-    "terser-config-atomic": "^0.1.1",
-    "typescript": "^4.3.5"
+    "shx": "^0.3.3"
   },
   "keywords": [
     "pnpm",
