--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "yargs": "^3.32.0"
   },
   "devDependencies": {
+    "@arkweid/lefthook": "^0.7.6",
     "@types/async": "^3.2.7",
     "@types/express": "^4.17.13",
     "@types/first-mate": "^7.0.6",
@@ -81,7 +82,6 @@
     "eslint-config-atomic": "^1.16.2",
     "express": "^4.17.1",
     "gitly": "^2.1.2",
-    "husky": "^7.0.0",
     "jasmine-focused": ">=1.0.7 <2.0",
     "lint-staged": "^11.1.2",
     "node-downloader-helper": "^1.0.18",
